# renovate-test-repo-b

./: .gitmodules  Cargo.toml  README.md
test-b/: Cargo.toml
test-b/src/: main.rs
