[package]
name = "test-b"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
member-a = { path = "../renovate-test-repo-a/member-a" }
member-b = { path = "../renovate-test-repo-a/member-b" }

dotenv = "0.14.0"
retry = "1.3"